storage detail